Correcting the Html divider-1

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             alt="Imagem de mulher sorrindo com secador na mão e escovando o cabelo de outra mulher"
           />
           </div>
-          <div class="tex">
+          <div class="text">
             <h1>Saúde natural para os seus cabelos</h1>
             <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
             <a class="button" href="#"">Agenda um horário</a>
           </div>
         </div>
       </section>
-      <div class="div1"></div>
+      <div class="divider-1"></div>
       <section class="section">
         <div class=" container">outra section</div>
     </section>
