--- a/index.html
+++ b/index.html
@@ -7,41 +7,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
-    
-     <!-- STYLES-->
-     <link rel="stylesheet" href="style.css">
-    
-     <!--FONTS-->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    </head>
+
+    <!-- Icones-->
+<link rel="stylesheet" href="style.css">
+    <!-- STYLES-->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
+
+    <!--FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body>
     <header id="header">
-      <nav class="container"> 
-        <a class="logo" href="#">beauty<span>salon</span>.</a>
-        <div class="menu">....</div>
+      <nav class="container">
+        <!--Menu-->
+    <div class="menu">
+          <ul>
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
+          </ul class="grid">
+        </div>
+        <!--/Menu-->
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
     <main>
-      <section class="section" id="home"> 
+      <section class="section" id="home">
         <div class="container grid">
           <div class="image">
             <img
-            src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
-            alt="Imagem de mulher sorrindo com secador na mão e escovando o cabelo de outra mulher"
-          />
+              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
+              alt="Imagem de mulher sorrindo com secador na mão e escovando o cabelo de outra mulher"
+            />
           </div>
           <div class="text">
-            <h1>Saúde natural para os seus cabelos</h1>
-            <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
-            <a class="button" href="#"">Agenda um horário</a>
+            <h2 class="title">Saúde natural para os seus cabelos</h2>
+            <p>
+              Um salão exclusivo em São Paulo, especializado em tratamentos
+              naturais.
+            </p>
+            <a class="button" href="#">Agenda um horário</a>
           </div>
         </div>
       </section>
       <div class="divider-1"></div>
-      <section class="section">
-        <div class=" container">outra section</div>
-    </section>
+      <section class="section" id="about">
+        <div class="image">
+          <img src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="tres mulheres sorrindo e com material de estetica de beleza na mao">
+        </div>
+        <div class="text"></div>
+        <h2 class="title">Sobre nós</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsum fugiat nulla quae animi? Quod, enim adipisci saepe ut soluta atque doloribus similique repellat consequatur nisi, quasi omnis quam facilis.
+        </p>
+        <br>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum vel dolor sed laudantium similique sit vero reiciendis sapiente delectus, quos fugiat fuga non consequuntur animi eos odio ex. Sint, impedit?
+        </p>
+        <br>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, id! Neque itaque nisi, nulla voluptas ducimus quo rem hic aliquam odio libero. Doloribus molestiae mollitia officiis aut accusamus. Dicta, nobis!
+        </p>
+        <div class="container grid"></div>
+      </section>
+      <div class="divider-2"></div>
+      <section class="section" id="services">
+        <header>
+          <h2 class="title">Serviços</h2>
+          <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais
+          </p>
+        </header>
+        <div class="cards">
+          <div class="card">
+            <div class="icon-woman-hair"></div>
+            <h3 class="titles">Terapia Capilar</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quisquam necessitatibus aspernatur similique quaerat incidunt eligendi numquam distinctio voluptatem quos ipsum, sint omnis iure inventore natus, totam non obcaecati tenetur?
+            </p>
+          </div>
+          <div class="card">
+            <div class="icon-trim"></div>
+            <h3 class="titles">Cortes</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, voluptatum, necessitatibus repellendus tempora unde 
+            </p>
+          </div>
+          <div class="card">
+            <div class="icon-cosmetic"></div>
+            <h3 class="titles">Tratamentos</h3>
+            <p>cidunt eligendi numquam distinctio voluptatem quos ipsum, sint omnis iure inventore natus, totam non obcaecati tenetur?
+            </p>
+          </div>
+        </div>
+        <div class="container grid"></div>
+      </section>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
