[Mission: Origin] Aula 02/02 – Expandindo o conhecimento

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>OriginSix</title>
 
     <!-- Icones-->
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+
     <!-- STYLES-->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
@@ -23,21 +24,24 @@
   <body>
     <header id="header">
       <nav class="container">
+        <a class="logo" href="#">Beleza<span>Urbana</span>.</a>
+
         <!--Menu-->
-    <div class="menu">
+        <div class="menu">
           <ul>
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
             <li><a class="title" href="#services">Serviços</a></li>
             <li><a class="title" href="#testimonials">Depoimentos</a></li>
             <li><a class="title" href="#contact">Contato</a></li>
-          </ul class="grid">
+          </ul>
         </div>
         <!--/Menu-->
         <div class="toggle icon-menu"></div>
         <div class="toggle icon-close"></div>
       </nav>
     </header>
+
     <main>
       <section class="section" id="home">
         <div class="container grid">
@@ -58,50 +62,84 @@
         </div>
       </section>
       <div class="divider-1"></div>
+
       <section class="section" id="about">
-        <div class="image">
-          <img src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="tres mulheres sorrindo e com material de estetica de beleza na mao">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt="tres mulheres sorrindo e com material de estetica de beleza na mao"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+              ipsum fugiat nulla quae animi? Quod, enim adipisci saepe ut soluta
+              atque doloribus similique repellat consequatur nisi, quasi omnis
+              quam facilis.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum
+              vel dolor sed laudantium similique sit vero reiciendis sapiente
+              delectus, quos fugiat fuga non consequuntur animi eos odio ex.
+              Sint, impedit?
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+              id! Neque itaque nisi, nulla voluptas ducimus quo rem hic aliquam
+              odio libero. Doloribus molestiae mollitia officiis aut accusamus.
+              Dicta, nobis!
+            </p>
+          </div>
         </div>
-        <div class="text"></div>
-        <h2 class="title">Sobre nós</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus ipsum fugiat nulla quae animi? Quod, enim adipisci saepe ut soluta atque doloribus similique repellat consequatur nisi, quasi omnis quam facilis.
-        </p>
-        <br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum vel dolor sed laudantium similique sit vero reiciendis sapiente delectus, quos fugiat fuga non consequuntur animi eos odio ex. Sint, impedit?
-        </p>
-        <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, id! Neque itaque nisi, nulla voluptas ducimus quo rem hic aliquam odio libero. Doloribus molestiae mollitia officiis aut accusamus. Dicta, nobis!
-        </p>
-        <div class="container grid"></div>
       </section>
+
       <div class="divider-2"></div>
+
       <section class="section" id="services">
-        <header>
-          <h2 class="title">Serviços</h2>
-          <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais
-          </p>
-        </header>
-        <div class="cards">
-          <div class="card">
-            <div class="icon-woman-hair"></div>
-            <h3 class="titles">Terapia Capilar</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quisquam necessitatibus aspernatur similique quaerat incidunt eligendi numquam distinctio voluptatem quos ipsum, sint omnis iure inventore natus, totam non obcaecati tenetur?
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>
+              Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
+              conquistou clientes de inúmeros países com seus tratamentos
+              exclusivos e totalmente naturais
             </p>
-          </div>
-          <div class="card">
-            <div class="icon-trim"></div>
-            <h3 class="titles">Cortes</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, voluptatum, necessitatibus repellendus tempora unde 
-            </p>
-          </div>
-          <div class="card">
-            <div class="icon-cosmetic"></div>
-            <h3 class="titles">Tratamentos</h3>
-            <p>cidunt eligendi numquam distinctio voluptatem quos ipsum, sint omnis iure inventore natus, totam non obcaecati tenetur?
-            </p>
+          </header>
+
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia capilar</h3>
+              <p>
+                Prettier is an opinionated code formatter. It enforces a
+                consistent style by parsing your code and re-printing it with
+                its
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Cortes</h3>
+              <p>
+                Prettier is an opinionated code formatter. It enforces a
+                consistent style by parsing your code and re-printing it with
+                its
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">tratamentos</h3>
+              <p>
+                Prettier is an opinionated code formatter. It enforces a
+                consistent style by parsing your code and re-printing it with
+                its
+              </p>
+            </div>
           </div>
         </div>
-        <div class="container grid"></div>
       </section>
     </main>
     <script src="main.js"></script>
