--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
 
-    <!-- Icones-->
-    <link rel="stylesheet" href="style.css" />
+    <!-- ICONES-->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
 
     <!-- STYLES-->
-    <link rel="stylesheet" href="assets/fonts/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <!--FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +28,7 @@
 
         <!--Menu-->
         <div class="menu">
-          <ul>
+          <ul class="grid">
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
             <li><a class="title" href="#services">Serviços</a></li>
@@ -37,6 +37,7 @@
           </ul>
         </div>
         <!--/Menu-->
+
         <div class="toggle icon-menu"></div>
         <div class="toggle icon-close"></div>
       </nav>
