--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <!-- ICONES-->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
+    <!--SWIPER-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+
     <!-- STYLES-->
     <link rel="stylesheet" href="style.css" />
 
@@ -19,6 +25,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
+    />
+
+    <!--SWIPER-->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
   </head>
   <body>
@@ -44,6 +56,7 @@
     </header>
 
     <main>
+      <!--HOME-->
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -64,6 +77,7 @@
       </section>
       <div class="divider-1"></div>
 
+      <!--ABOUT-->
       <section class="section" id="about">
         <div class="container grid">
           <div class="image">
@@ -100,6 +114,7 @@
 
       <div class="divider-2"></div>
 
+      <!--SERVICES-->
       <section class="section" id="services">
         <div class="container grid">
           <header>
@@ -142,7 +157,114 @@
           </div>
         </div>
       </section>
+
+      <!--TESTIMONIALS-->
+      <div class="divider-1"></div>
+      <section class="section" id="testimonials">
+        <div class="container">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrapper">
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Vero accusantium tempora necessitatibus iure! Ipsam
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/fotos/jessica.jpg"
+                      alt="Foto de Jessica Lima, mulher mestiça de cabelo vermelho longo e liso"
+                    />
+                    Jessica Lima
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Vero accusantium tempora necessitatibus iure! Ipsam
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/fotos/elza.jpg"
+                      alt="Foto de Maria Elza, mulher negra de cbelos curto e cacheados"
+                    />
+                    Maria elza
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Vero accusantium tempora necessitatibus iure! Ipsam
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/fotos/eliana.jpg"
+                      alt="Foto de Eliana Pinheiro Oliveira, mulher afrodescendente de cabelo quimicamente alisado"
+                    />
+                    Eliana Pinheiro Oliveira
+                  </cite>
+                </blockquote>
+              </div>
+            </div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-2"></div>
+
+      <!--CONTACT-->
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente!</h2>
+            <p>
+              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+              ouvir suas críticas e sugestões.
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5516992334880&text=oi! gostaria de agendar um horário"
+              class="button"
+              target="blak"
+              ><i class="icon-whatsapp"></i>Entra em contato</a
+            >
+          </div>
+
+          <div class="link">
+            <ul class="grid">
+              <i class="icon-phone"></i
+              >16 99233-4880
+            </ul>
+            <ul>
+              <i class="icon-map-pin"></i
+              >R. Roque Moura,
+            </ul>
+            <ul>
+              <i class="icon-mail"></i
+              >contato@belezaurbana.com.br
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <!--SCROLLREVEAL-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!--MAIN.JS-->
     <script src="main.js"></script>
   </body>
 </html>
