--- a/index.html
+++ b/index.html
@@ -26,12 +26,6 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
-    <!--SWIPER-->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
   </head>
   <body>
     <header id="header">
@@ -75,6 +69,7 @@
           </div>
         </div>
       </section>
+
       <div class="divider-1"></div>
 
       <!--ABOUT-->
@@ -158,8 +153,9 @@
         </div>
       </section>
 
-      <!--TESTIMONIALS-->
       <div class="divider-1"></div>
+
+      <!--TESTIMONIALS-->
       <section class="section" id="testimonials">
         <div class="container">
           <header>
@@ -233,7 +229,7 @@
           <div class="text">
             <h2 class="title">Entre em contato com a gente!</h2>
             <p>
-              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+              Entre em contato com a BelezaUrbana., queremos tirar suas dúvidas,
               ouvir suas críticas e sugestões.
             </p>
             <a
@@ -246,24 +242,21 @@
 
           <div class="link">
             <ul class="grid">
-              <i class="icon-phone"></i
-              >16 99233-4880
-            </ul>
-            <ul>
-              <i class="icon-map-pin"></i
-              >R. Roque Moura,
-            </ul>
-            <ul>
-              <i class="icon-mail"></i
-              >contato@belezaurbana.com.br
+              <li><i class="icon-phone"></i> 16 99233-4880</li>
+              <li><i class="icon-map-pin"></i> R. Roque Moura, 76</li>
+              <li><i class="icon-mail"></i> contato@belezaurbana.com.br</li>
             </ul>
           </div>
         </div>
       </section>
     </main>
 
+    <!-- swiper -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
     <!--SCROLLREVEAL-->
     <script src="https://unpkg.com/scrollreveal"></script>
+
     <!--MAIN.JS-->
     <script src="main.js"></script>
   </body>
