[Mission: Origin] Aula 04 – Aprofundando no JavaScript

--- a/index.html
+++ b/index.html
@@ -249,7 +249,36 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
     </main>
+
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">Beleza<span>Urbana</span>.</a>
+          <p>2021 BelezaUrbana.</p>
+          <p>Todos os direiros reservados.</p>
+        </div>
+
+        <div class="social">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100029755350962"
+            target="_blank"
+          >
+            <i class="icon-facebook"></i>
+          </a>
+          <a href="https://youtube.com.br" target="_blank">
+            <i class="icon-youtube"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-chevron-up"></i></a>
 
     <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
