--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <!--SERVICES-->
       <section class="section" id="services">
         <div class="container grid">
-          <header>
+          <header class="subtitle">
             <h2 class="title">Serviços</h2>
             <p>
               Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
@@ -261,7 +261,7 @@
           <p>Todos os direiros reservados.</p>
         </div>
 
-        <div class="social">
+        <div class="social grid">
           <a href="https://instagram.com" target="_blank">
             <i class="icon-instagram"></i>
           </a>
